--- a/src/gui.glade
+++ b/src/gui.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="rate_adjustment">
@@ -19,6 +19,9 @@
     <property name="title" translatable="yes">noaa-apt</property>
     <property name="default_width">500</property>
     <property name="default_height">0</property>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
@@ -274,7 +277,6 @@
                   <object class="GtkLabel" id="status_label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="halign">start</property>
                     <property name="label" translatable="yes">Not ready</property>
                     <attributes>
                       <attribute name="style" value="italic"/>
