Lots of documentation and increment version number

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -5,8 +5,11 @@
 			<li {% if current[1] == 'index.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li>
 			<li {% if current[1] == 'download.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/download.html">Download</a></li>
 			<li {% if current[1] == 'usage.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
+			<li {% if current[1] == 'guide.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/guide.html">Guide</a></li>
 			<li {% if current[1] == 'alternatives.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/alternatives.html">Alternatives</a></li>
+            <br/>
 			<li {% if current[1] == 'how-it-works.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/how-it-works.html">How it works</a></li>
+			<li {% if current[1] == 'development.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/development.html">Dev</a></li>
 			<li> <a href="https://github.com/martinber/noaa-apt">GitHub</a></li>
 		</ul>
 	</nav>
