--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -58,6 +58,7 @@
 												<li><a href="http://gpredict.oz9aec.net/">GPredict satellite tracker</a></li>
 												<li><a href="http://gqrx.dk/">GQRX radio receiver</a></li>
 												<li><a href="https://airspy.com/download/">SDR# radio receiver</a></li>
+												<li><a href="http://www.5b4az.org/">GLRPT Meteor-M N2 decoder</a></li>
 											</ul>
 										</section>
 										<section class="6u">
