--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -9,7 +9,7 @@
 			<li {% if current[1] == 'alternatives.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/alternatives.html">Alternatives</a></li>
             <br/>
 			<li {% if current[1] == 'how-it-works.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/how-it-works.html">How it works</a></li>
-			<li {% if current[1] == 'development.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/development.html">Dev</a></li>
+			<li {% if current[1] == 'development.html' %}class='current'{% endif %}><a href="{{ site.baseurl }}/development.html">Development</a></li>
 			<li> <a href="https://github.com/martinber/noaa-apt">GitHub</a></li>
 		</ul>
 	</nav>
