--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -664,6 +664,11 @@
 	margin-left: 2em
 }
 
+#main ol {
+	list-style: decimal;
+	margin-left: 2em
+}
+
 /* Paragraphs on content are too sparse */
 #main p {
 	margin: 1em 0 0.3em 0;
