--- a/docs/_layouts/landing.html
+++ b/docs/_layouts/landing.html
@@ -17,7 +17,7 @@ layout: default
 								<section>
 									<header class="major">
 										<img id="icon" src="images/icon.png" alt="Icon"/>
-										<h2>noaa-apt</h2>
+										<h2>noaa-apt {% include_relative version_check %}</h2>
 										<span class="byline">{{ site.description }}</span>
 									</header>
 									<a href="{{ site.baseurl }}/download.html" class="button alt">Download</a>
