--- a/src/gui/main.glade
+++ b/src/gui/main.glade
@@ -8,11 +8,11 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="p_hscale_adjustment">
-    <property name="lower">80</property>
-    <property name="upper">120</property>
+    <property name="lower">90</property>
+    <property name="upper">110</property>
     <property name="value">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step_increment">0.01</property>
+    <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="p_min_adjustment">
     <property name="upper">59</property>
@@ -25,11 +25,11 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="p_vscale_adjustment">
-    <property name="lower">80</property>
-    <property name="upper">120</property>
+    <property name="lower">90</property>
+    <property name="upper">110</property>
     <property name="value">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step_increment">0.01</property>
+    <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="p_yaw_adjustment">
     <property name="lower">-30</property>
@@ -383,7 +383,7 @@
                                                     <property name="can_focus">False</property>
                                                     <property name="active">0</property>
                                                     <items>
-                                                      <item id="auto" translatable="yes">Automatic (from orbit)</item>
+                                                      <item id="auto" translatable="yes">Auto (from orbit)</item>
                                                       <item id="no" translatable="yes">No</item>
                                                       <item id="yes" translatable="yes">Yes</item>
                                                     </items>
@@ -765,7 +765,9 @@ start:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="tooltip_text" translatable="yes">Tweak this value if the map overlay looks rotated slightly.</property>
+                                                    <property name="width_chars">7</property>
                                                     <property name="adjustment">p_yaw_adjustment</property>
+                                                    <property name="digits">2</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
@@ -802,7 +804,9 @@ start:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="tooltip_text" translatable="yes">Tweak this if the map overlay looks slightly taller/shorter than the image.</property>
+                                                    <property name="width_chars">7</property>
                                                     <property name="adjustment">p_vscale_adjustment</property>
+                                                    <property name="digits">2</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
@@ -826,7 +830,9 @@ start:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="tooltip_text" translatable="yes">Tweak this if the map overlay looks slightly wider/narrower than the image.</property>
+                                                    <property name="width_chars">7</property>
                                                     <property name="adjustment">p_hscale_adjustment</property>
+                                                    <property name="digits">2</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
