--- a/src/gui/main.glade
+++ b/src/gui/main.glade
@@ -11,7 +11,7 @@
     <property name="lower">90</property>
     <property name="upper">110</property>
     <property name="value">100</property>
-    <property name="step_increment">0.01</property>
+    <property name="step_increment">0.10000000022351742</property>
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="p_min_adjustment">
@@ -28,7 +28,7 @@
     <property name="lower">90</property>
     <property name="upper">110</property>
     <property name="value">100</property>
-    <property name="step_increment">0.01</property>
+    <property name="step_increment">0.10000000022351742</property>
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="p_yaw_adjustment">
@@ -765,9 +765,9 @@ start:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="tooltip_text" translatable="yes">Tweak this value if the map overlay looks rotated slightly.</property>
-                                                    <property name="width_chars">7</property>
+                                                    <property name="width_chars">6</property>
                                                     <property name="adjustment">p_yaw_adjustment</property>
-                                                    <property name="digits">2</property>
+                                                    <property name="digits">1</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
@@ -804,9 +804,9 @@ start:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="tooltip_text" translatable="yes">Tweak this if the map overlay looks slightly taller/shorter than the image.</property>
-                                                    <property name="width_chars">7</property>
+                                                    <property name="width_chars">6</property>
                                                     <property name="adjustment">p_vscale_adjustment</property>
-                                                    <property name="digits">2</property>
+                                                    <property name="digits">1</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
@@ -830,9 +830,9 @@ start:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="tooltip_text" translatable="yes">Tweak this if the map overlay looks slightly wider/narrower than the image.</property>
-                                                    <property name="width_chars">7</property>
+                                                    <property name="width_chars">6</property>
                                                     <property name="adjustment">p_hscale_adjustment</property>
-                                                    <property name="digits">2</property>
+                                                    <property name="digits">1</property>
                                                   </object>
                                                   <packing>
                                                     <property name="left_attach">1</property>
