--- a/src/gui/main.glade
+++ b/src/gui/main.glade
@@ -469,7 +469,7 @@
                                                     <items>
                                                       <item id="noaa_15" translatable="yes">NOAA 15</item>
                                                       <item id="noaa_18" translatable="yes">NOAA 18</item>
-                                                      <item id="minmax" translatable="yes">NOAA 19</item>
+                                                      <item id="noaa_19" translatable="yes">NOAA 19</item>
                                                     </items>
                                                   </object>
                                                   <packing>
@@ -538,12 +538,15 @@
                                                     <property name="halign">center</property>
                                                     <property name="spacing">5</property>
                                                     <child>
-                                                      <object class="GtkLabel">
+                                                      <object class="GtkComboBoxText" id="p_ref_time_combo">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
-                                                        <property name="label" translatable="yes">Recording
-start:</property>
-                                                        <property name="justify">center</property>
+                                                        <property name="valign">center</property>
+                                                        <property name="active">0</property>
+                                                        <items>
+                                                          <item id="start" translatable="yes">Start time</item>
+                                                          <item id="end" translatable="yes">End time</item>
+                                                        </items>
                                                       </object>
                                                       <packing>
                                                         <property name="expand">False</property>
